--- a/frontend/public/imprint.html
+++ b/frontend/public/imprint.html
@@ -8,6 +8,9 @@
     </head>
     <body>
         <h1>Loernwerk - Impressum</h1>
-        <h3>Bearbeiten Sie die dist/imprint.html, um ihr eigenes Impressum einzubinden</h3>
+        <h3>
+            Bearbeiten Sie die dist/imprint.html, um ihr eigenes Impressum
+            einzubinden
+        </h3>
     </body>
 </html>
